--- a/Jk_Fitness/Views/Shared/_Layout.cshtml
+++ b/Jk_Fitness/Views/Shared/_Layout.cshtml
@@ -364,7 +364,7 @@
                                 </p>
                             </a>
                         </li>
-                        @*<li class="nav-item">
+                        <li class="nav-item">
                             <a href="#" class="nav-link active">
                                 <i class="nav-icon fas fa-inbox"></i>
                                 <p>
@@ -392,7 +392,7 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>*@
+                        </li>
 
                     </ul>
                 </nav>
