--- a/Jk_Fitness/Views/Shared/_Layout.cshtml
+++ b/Jk_Fitness/Views/Shared/_Layout.cshtml
@@ -368,7 +368,7 @@
                             <a href="#" class="nav-link active">
                                 <i class="nav-icon fas fa-inbox"></i>
                                 <p>
-                                    Report
+                                    Reports
                                     <i class="right fas fa-angle-left"></i>
                                 </p>
                             </a>
@@ -376,19 +376,19 @@
                                 <li class="nav-item" id="Product">
                                     <a href="@Url.Action("MembershipReport", "Membership")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Members Report</p>
+                                        <p>Members</p>
                                     </a>
                                 </li>
                                 <li class="nav-item" id="SellProduct">
                                     <a href="@Url.Action("ViewSoldProductsReport", "Product")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Sell Products Report</p>
+                                        <p>Sell Products</p>
                                     </a>
                                 </li>
                                 <li class="nav-item" id="ViewSoldProduct">
                                     <a href="@Url.Action("MembershipPaymentsReport", "PaymentsExpenses")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Membership Payment Report</p>
+                                        <p>Membership Payments</p>
                                     </a>
                                 </li>
                             </ul>
