Request Trainers Model design

--- a/Jk_Fitness/Views/PaymentsExpenses/GymAccounts.cshtml
+++ b/Jk_Fitness/Views/PaymentsExpenses/GymAccounts.cshtml
@@ -1,23 +1,16 @@
 ﻿
-@{ 
-    ViewData["Title"] = "GymAccounts";
-    Layout = "~/Views/Shared/_Layout.cshtml"; 
-}
+@{ ViewData["Title"] = "GymAccounts";
+                Layout = "~/Views/Shared/_Layout.cshtml"; }
 
-<style>
-    @*@media print {
-        .noPrint{
-        display:none;
-    }
-}*@
-</style>
+<link href="~/css/print.css" rel="stylesheet" />
 
 <div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-header">
                 <div class="form-group">
-                    <h3 class="card-title">GYM Accounts</h3>
+                    <h2 class="card-title noPrint">GYM Accounts</h2>
+                    <h2 class="card-title headPrint">GYM Accounts</h2>
                 </div>
             </div>
             <div class="card-body">
@@ -37,7 +30,7 @@
                                 <select class="form-control" id="Year"></select>
                             </div>
                         </div>
-                    </div>                 
+                    </div>
                     <div class="col-md-2" style="padding-top:30px">
                         <div class="form-group">
                             <button type="button" onclick="window.print();" class="btn btn-secondary col-md-12 col-sm-12 noprint"><i class="fa fa-download"></i> Download Report</button>
