--- a/Jk_Fitness/Views/Employee/Index.cshtml
+++ b/Jk_Fitness/Views/Employee/Index.cshtml
@@ -233,7 +233,7 @@
                                         </div>
                                     </div>
 
-                                    <label class="control-label col-md-3 col-sm-3" @*style="text-align:center"*@>Evening End Time</label>
+                                    <label class="control-label col-md-3 col-sm-3">Evening End Time</label>
 
                                     <div class="input-group date col-md-3 col-sm-3" id="timepicker3" data-target-input="nearest">
                                         <input type="text" id="EveningOut" class="form-control datetimepicker-input" data-target="#timepicker3" data-toggle="datetimepicker" />
@@ -243,9 +243,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="custom-control custom-checkbox">
-                                <input class="custom-control-input" type="checkbox" id="Status" value="true">
-                                <label for="Status" class="custom-control-label">Active</label>
+                            <div class="form-group row">
+                                <div class="custom-control custom-checkbox col-md-3 col-sm-3">
+                                    <input class="custom-control-input" type="checkbox" id="Status" value="true">
+                                    <label for="Status" class="custom-control-label">Active</label>
+                                </div>
+                                <div class="custom-control custom-checkbox col-md-3 col-sm-3">
+                                    <input class="custom-control-input" type="checkbox" id="isTrainer" value="true">
+                                    <label for="isTrainer" class="custom-control-label">Gym Trainer</label>
+                                </div>
                             </div>
                             <div class="ln_solid"></div>
                             <div class="form-group">
