--- a/Jk_Fitness/Views/Home/Index.cshtml
+++ b/Jk_Fitness/Views/Home/Index.cshtml
@@ -2,7 +2,59 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    <div class="col-12 col-sm-12">
+        <div class="card card-primary card-outline card-tabs">
+            <div class="card-header p-0 pt-1 border-bottom-0">
+                <ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="NewTraining" data-toggle="pill" href="#TableContent" role="tab" aria-controls="custom-tabs-three-home" aria-selected="true">New Training Request</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="TrainingHistroy" data-toggle="pill" href="#TableContent" role="tab" aria-controls="custom-tabs-three-profile" aria-selected="false">Training History</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label>Branch</label>
+                            <div class="input-group date col-md-12 col-sm-12" id="Rdate" data-target-input="nearest">
+                                <input type="text" id="ReqDate" class="form-control datetimepicker-input" data-target="#Rdate" data-toggle="datetimepicker" />
+                                <div class="input-group-append" data-target="#Rdate" data-toggle="datetimepicker">
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-content" id="custom-tabs-three-tabContent">
+                    <div class="tab-pane fade show active" id="TableContent" role="tabpanel" aria-labelledby="custom-tabs-three-settings-tab">
+                        <div class="card-footer table-responsive">
+                            <table id="example1" class="table table-bordered table-striped tblcontent">
+                                <thead>
+                                    <tr>
+                                        <th>Time Slot</th>
+                                        <th>Requested Member Id</th>
+                                        <th>Requested Member Name</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tbodyPack">
+                                </tbody>
+                            </table>
+                            <div class="msg-block" id="noRecordspack">
+                                <label>No Records found.</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /.card -->
+        </div>
+    </div>
+    <input type="hidden" id="GetNotificationDetails" value="@Url.Action("GetNotifications", "Notification")" />
+    <input type="hidden" id="GetBranchDetails" value="@Url.Action("GetBranchDetails", "Membership")" />
 </div>
+<script src="~/js/page.employeeHome.js"></script>
