--- a/Jk_Fitness/Views/MemberHome/Index.cshtml
+++ b/Jk_Fitness/Views/MemberHome/Index.cshtml
@@ -7,10 +7,161 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Member Home</title>
+    <link rel="icon" href="~/dist/img/jkfitness.jpeg" />
+    <!-- Google Font: Source Sans Pro -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- Tempusdominus Bootstrap 4 -->
+    <link rel="stylesheet" href="~/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+    <!-- iCheck -->
+    <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+    <!-- JQVMap -->
+    <link rel="stylesheet" href="~/plugins/jqvmap/jqvmap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Theme style -->
+    <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
+    <!-- overlayScrollbars -->
+    <link rel="stylesheet" href="~/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+    <!-- Daterange picker -->
+    <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">
+    <!-- summernote -->
+    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css">
+    <link href="~/css/custom.css" rel="stylesheet" />
+    <link href="~/css/ecommerce.css" rel="stylesheet" />
+    <!-- jQuery -->
+    <script src="~/plugins/jquery/jquery.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@9.5.3/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.5.3/dist/sweetalert2.all.min.js"></script>
+    <link href="~/plugins/DataTableNew/datatables.min.css" rel="stylesheet" />
 </head>
 <body>
-    <img src="~/dist/img/UnderConstruction.jpg">
+
+    <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header">
+                    <div class="form-group">
+                        <h3 class="card-title">Member Dashboard</h3>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="col-md-12 form-group row">
+                        <div class="col-md-5">
+                            <div class="form-group row ">
+                                <label class="control-label col-md-4 col-sm-4 ">Date</label>
+                                <div class="input-group date col-md-8 col-sm-8" id="Tdate" data-target-input="nearest">
+                                    <input type="text" id="Date" class="form-control datetimepicker-input" data-target="#Tdate" data-toggle="datetimepicker" />
+                                    <div class="input-group-append" data-target="#Tdate" data-toggle="datetimepicker">
+                                        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row ">
+                                <label class="control-label col-md-4 col-sm-4 ">Trainer</label>
+                                <div class="col-md-8 col-sm-8">
+                                    <select class="form-control" id="Trainer"></select>
+                                </div>
+                            </div>
+                            <div class="card-footer table-responsive">
+                                <table id="tblNewTraining" class="table table-bordered table-striped tblNewTraining">
+                                    <thead>
+                                        <tr>
+                                            <th>Time Slot</th>
+                                            <th>Status</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="tbodyid1">
+                                    </tbody>
+                                </table>
+                                <div class="msg-block" id="noRecords1">
+                                    <label>No Records found.</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-7">
+                            <div class="form-group row ">
+                                <label class="control-label col-md-4 col-sm-4 ">Month</label>
+                                <div class="col-md-8 col-sm-8">
+                                    <select class="form-control" id="Month"></select>
+                                </div>
+                            </div>
+                            <div class="card-footer table-responsive">
+                                <table id="tblTrainingHistroy" class="table table-bordered table-striped tblTrainingHistroy">
+                                    <thead>
+                                        <tr>
+                                            <th>Date</th>
+                                            <th>Time Slot</th>
+                                            <th>Trainer Name</th>
+                                            <th>Status</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="tbodyid">
+                                    </tbody>
+                                </table>
+                                <div class="msg-block" id="noRecords2">
+                                    <label>No Records found.</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="wait" class="loading-gif"><img src="~/dist/img/Loading.gif" width="70" height="70" /><br></div>
+            </div>
+            <!-- /.card -->
+        </div>
+        <!-- /.col -->
+        <input type="hidden" id="GetTrainers" value="@Url.Action("GetTrainers", "MemberHome")" />
+        <input type="hidden" id="NewTrainingRequest" value="@Url.Action("NewTrainingRequest", "MemberHome")" />
+        <input type="hidden" id="SaveNewTrainingRequest" value="@Url.Action("SaveNewTrainingRequest", "MemberHome")" />
+        <input type="hidden" id="TrainingHistroy" value="@Url.Action("TrainingHistroy", "MemberHome")" />
+    </div>
+
+
+
+    <script src="~/js/page.memberHome.js"></script>
+   
+    <!-- jQuery -->
+    <script src="~/plugins/jquery/jquery.js"></script>
+    <!-- jQuery -->
+    <script src="~/plugins/jquery/jquery.min.js"></script>
+    <!-- jQuery UI 1.11.4 -->
+    <script src="~/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+    <script>
+        $.widget.bridge('uibutton', $.ui.button)
+    </script>
+    <!-- Bootstrap 4 -->
+    <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- ChartJS -->
+    <script src="~/plugins/chart.js/Chart.min.js"></script>
+    <!-- Sparkline -->
+    <!--<script src="~/plugins/sparklines/sparkline.js"></script>-->
+    <!-- JQVMap -->
+    <!--<script src="~/plugins/jqvmap/jquery.vmap.min.js"></script>
+    <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>-->
+    <!-- jQuery Knob Chart -->
+    <script src="~/plugins/jquery-knob/jquery.knob.min.js"></script>
+    <!-- daterangepicker -->
+    <script src="~/plugins/moment/moment.min.js"></script>
+    <script src="~/plugins/daterangepicker/daterangepicker.js"></script>
+    <!-- Tempusdominus Bootstrap 4 -->
+    <script src="~/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <!-- Summernote -->
+    <script src="~/plugins/summernote/summernote-bs4.min.js"></script>
+    <!-- overlayScrollbars -->
+    <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="~/dist/js/adminlte.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="~/dist/js/demo.js"></script>
+    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    @*<script src="~/dist/js/pages/dashboard.js"></script>*@
 </body>
 </html>
