--- a/Jk_Fitness/Views/Home/Index.cshtml
+++ b/Jk_Fitness/Views/Home/Index.cshtml
@@ -8,31 +8,39 @@
             <div class="card-header p-0 pt-1 border-bottom-0">
                 <ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="NewTraining" data-toggle="pill" href="#TableContent" role="tab" aria-controls="custom-tabs-three-home" aria-selected="true">New Training Request</a>
+                        <a class="nav-link active" id="PackageExpirationLastMonth" data-toggle="pill" href="#PackageExpiration" role="tab" aria-controls="custom-tabs-three-home" aria-selected="true">New Training Request</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="TrainingHistroy" data-toggle="pill" href="#TableContent" role="tab" aria-controls="custom-tabs-three-profile" aria-selected="false">Training History</a>
+                        <a class="nav-link" id="MembershipExpirationNextMonth" data-toggle="pill" href="#MembershipExpiration" role="tab" aria-controls="custom-tabs-three-settings" aria-selected="false">Training Histroy</a>
                     </li>
                 </ul>
             </div>
             <div class="card-body">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label>Branch</label>
-                            <div class="input-group date col-md-12 col-sm-12" id="Rdate" data-target-input="nearest">
+                <div class="tab-content" id="custom-tabs-three-tabContent">
+                    <div class="tab-pane fade " id="custom-tabs-three-home" role="tabpanel" aria-labelledby="custom-tabs-three-home-tab">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada lacus ullamcorper dui molestie, sit amet congue quam finibus. Etiam ultricies nunc non magna feugiat commodo. Etiam odio magna, mollis auctor felis vitae, ullamcorper ornare ligula. Proin pellentesque tincidunt nisi, vitae ullamcorper felis aliquam id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin id orci eu lectus blandit suscipit. Phasellus porta, ante et varius ornare, sem enim sollicitudin eros, at commodo leo est vitae lacus. Etiam ut porta sem. Proin porttitor porta nisl, id tempor risus rhoncus quis. In in quam a nibh cursus pulvinar non consequat neque. Mauris lacus elit, condimentum ac condimentum at, semper vitae lectus. Cras lacinia erat eget sapien porta consectetur.
+                    </div>
+                    <div class="tab-pane fade" id="custom-tabs-three-profile" role="tabpanel" aria-labelledby="custom-tabs-three-profile-tab">
+                        Mauris tincidunt mi at erat gravida, eget tristique urna bibendum. Mauris pharetra purus ut ligula tempor, et vulputate metus facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas sollicitudin, nisi a luctus interdum, nisl ligula placerat mi, quis posuere purus ligula eu lectus. Donec nunc tellus, elementum sit amet ultricies at, posuere nec nunc. Nunc euismod pellentesque diam.
+                    </div>
+                    <div class="tab-pane fade" id="custom-tabs-three-messages" role="tabpanel" aria-labelledby="custom-tabs-three-messages-tab">
+                        Morbi turpis dolor, vulputate vitae felis non, tincidunt congue mauris. Phasellus volutpat augue id mi placerat mollis. Vivamus faucibus eu massa eget condimentum. Fusce nec hendrerit sem, ac tristique nulla. Integer vestibulum orci odio. Cras nec augue ipsum. Suspendisse ut velit condimentum, mattis urna a, malesuada nunc. Curabitur eleifend facilisis velit finibus tristique. Nam vulputate, eros non luctus efficitur, ipsum odio volutpat massa, sit amet sollicitudin est libero sed ipsum. Nulla lacinia, ex vitae gravida fermentum, lectus ipsum gravida arcu, id fermentum metus arcu vel metus. Curabitur eget sem eu risus tincidunt eleifend ac ornare magna.
+                    </div>
+                    <div class="tab-pane fade show active" id="PackageExpiration" role="tabpanel" aria-labelledby="custom-tabs-three-settings-tab">
+                        <div class="form-group row">
+                            <label class="control-label col-md-3 col-sm-3">Date</label>
+                            <div class="input-group date col-md-4 col-sm-4" id="Rdate" data-target-input="nearest">
                                 <input type="text" id="ReqDate" class="form-control datetimepicker-input" data-target="#Rdate" data-toggle="datetimepicker" />
                                 <div class="input-group-append" data-target="#Rdate" data-toggle="datetimepicker">
                                     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                 </div>
                             </div>
+                            <div class="col-md-3">
+                                <button type="button" id="btnSearch" class="btn btn-secondary col-md-12 col-sm-12"><i class="fa fa-search"></i> Search</button>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="tab-content" id="custom-tabs-three-tabContent">
-                    <div class="tab-pane fade show active" id="TableContent" role="tabpanel" aria-labelledby="custom-tabs-three-settings-tab">
                         <div class="card-footer table-responsive">
-                            <table id="example1" class="table table-bordered table-striped tblcontent">
+                            <table id="example1" class="table table-bordered table-striped tblNewRequest">
                                 <thead>
                                     <tr>
                                         <th>Time Slot</th>
@@ -49,12 +57,38 @@
                             </div>
                         </div>
                     </div>
+                    <div class="tab-pane fade" id="MembershipExpiration" role="tabpanel" aria-labelledby="custom-tabs-three-settings-tab">
+                        <div class="form-group row ">
+                            <label class="control-label col-md-4 col-sm-4 ">Month</label>
+                            <div class="col-md-8 col-sm-8">
+                                <select class="form-control" id="Month"></select>
+                            </div>
+                        </div>
+                        <div class="card-footer table-responsive">
+                            <table id="example1" class="table table-bordered table-striped tblRequestHistroy">
+                                <thead>
+                                    <tr>
+                                        <th>Time Slot</th>
+                                        <th>Requested Member Id</th>
+                                        <th>Requested Member Name</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tbodyidMem">
+                                </tbody>
+                            </table>
+                            <div class="msg-block" id="noRecordsmem">
+                                <label>No Records found.</label>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <!-- /.card -->
         </div>
     </div>
-    <input type="hidden" id="GetNotificationDetails" value="@Url.Action("GetNotifications", "Notification")" />
-    <input type="hidden" id="GetBranchDetails" value="@Url.Action("GetBranchDetails", "Membership")" />
+    <input type="hidden" id="NewTrainingRequest" value="@Url.Action("NewTrainingRequest", "Home")" />
+    <input type="hidden" id="TrainingRequestHistroy" value="@Url.Action("TrainingRequestHistroy", "Home")" />
 </div>
 <script src="~/js/page.employeeHome.js"></script>
