--- a/Jk_Fitness/Views/MemberHome/Index.cshtml
+++ b/Jk_Fitness/Views/MemberHome/Index.cshtml
@@ -68,6 +68,9 @@
                                     <select class="form-control" id="Trainer"></select>
                                 </div>
                             </div>
+                            <div class="form-group row col-md-3 col-sm-3" style="float:right;">
+                                <button type="button" id="btnSearch" class="btn btn-secondary col-md-12 col-sm-12"><i class="fa fa-search"></i> Search</button>
+                            </div>
                             <div class="card-footer table-responsive">
                                 <table id="tblNewTraining" class="table table-bordered table-striped tblNewTraining">
                                     <thead>
