Add District and province

--- a/Jk_Fitness/Views/Employee/Index.cshtml
+++ b/Jk_Fitness/Views/Employee/Index.cshtml
@@ -75,6 +75,8 @@
     <input type="hidden" id="edit" value="@ViewBag.Edit" />
     <input type="hidden" id="delete" value="@ViewBag.Delete" />
     <input type="hidden" id="view" value="@ViewBag.View" />
+    <input type="hidden" id="ListProvinces" value="@Url.Action("ListProvinces", "Membership")" />
+    <input type="hidden" id="ListDistricts" value="@Url.Action("ListDistricts", "Membership")" />
 </div>
 
 @* Add new Employee and EDIT Employee Popup *@
@@ -156,16 +158,16 @@
                                     <input type="text" id="Street" class="form-control">
                                 </div>
                             </div>
-                            <div class="form-group row ">
-                                <label class="control-label col-md-3 col-sm-3">District</label>
+                            <div class="form-group row">
+                                <label class="control-label col-md-3 col-sm-3 ">Province</label>
                                 <div class="col-md-9 col-sm-9">
-                                    <input type="text" required id="District" class="form-control">
+                                    <select class="form-control" id="Province"></select>
                                 </div>
                             </div>
                             <div class="form-group row ">
-                                <label class="control-label col-md-3 col-sm-3 ">Province</label>
+                                <label class="control-label col-md-3 col-sm-3">District</label>
                                 <div class="col-md-9 col-sm-9">
-                                    <input type="text" id="Province" class="form-control">
+                                    <select class="form-control" id="District"></select>
                                 </div>
                             </div>
                             <div class="form-group row">
