--- a/Jk_Fitness/Views/Membership/Index.cshtml
+++ b/Jk_Fitness/Views/Membership/Index.cshtml
@@ -95,6 +95,8 @@
     <input type="hidden" id="edit" value="@ViewBag.Edit" />
     <input type="hidden" id="delete" value="@ViewBag.Delete" />
     <input type="hidden" id="view" value="@ViewBag.View" />
+    <input type="hidden" id="ListProvinces" value="@Url.Action("ListProvinces", "Membership")" />
+    <input type="hidden" id="ListDistricts" value="@Url.Action("ListDistricts", "Membership")" />
 
 </div>
 
@@ -236,17 +238,18 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="control-label col-md-3 col-sm-3 ">District</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Province</label>
                                 <div class="col-md-9 col-sm-9">
-                                    <input type="text" id="District" class="form-control">
+                                    <select class="form-control" id="Province"></select>
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="control-label col-md-3 col-sm-3 ">Province</label>
+                                <label class="control-label col-md-3 col-sm-3 ">District</label>
                                 <div class="col-md-9 col-sm-9">
-                                    <input type="text" id="Province" class="form-control">
+                                    <select class="form-control" id="District"></select>
                                 </div>
                             </div>
+
                             <div class="form-group row ">
                                 <div class="col-md-3 col-sm-3">
                                     <div class="custom-control custom-checkbox">
