--- a/Jk_Fitness/Views/Membership/MembershipReport.cshtml
+++ b/Jk_Fitness/Views/Membership/MembershipReport.cshtml
@@ -4,6 +4,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    .dataTables_filter{
+        visibility: hidden !important;
+    }
+</style>
+
 <div class="row">
     <div class="col-12">
         <div class="card">
