--- a/Jk_Fitness/Views/Membership/Index.cshtml
+++ b/Jk_Fitness/Views/Membership/Index.cshtml
@@ -117,13 +117,13 @@
                             <input type="hidden" value="0" id="MembershipId" />
 
                             <div class="form-group row ">
-                                <label class="control-label col-md-3 col-sm-3">First Name</label>
+                                <label class="control-label col-md-3 col-sm-3">First Name<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-9 col-sm-9">
                                     <input type="text" required id="Fname" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group row ">
-                                <label class="control-label col-md-3 col-sm-3 ">Last Name</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Last Name<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-9 col-sm-9">
                                     <input type="text" id="Lname" class="form-control">
                                 </div>
@@ -172,7 +172,7 @@
                             </div>
 
                             <div class="form-group row ">
-                                <label class="control-label col-md-3 col-sm-3 ">Contact No</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Contact No<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-9 col-sm-9 ">
                                     <input type="text" id="ContactNo" class="form-control" placeholder="771234567">
                                     <span id="ContactAlert" class="error" style="color: red;display:none">
@@ -182,7 +182,7 @@
                             </div>
 
                             <div class="form-group row ">
-                                <label class="control-label col-md-3 col-sm-3 ">Email</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Email<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-9 col-sm-9 ">
                                     <input type="text" id="Email" class="form-control">
                                     <span id="EmailAlert" class="error" style="color: red;display:none">
@@ -192,7 +192,7 @@
                             </div>
 
                             <div class="form-group row ">
-                                <label class="control-label col-md-3 col-sm-3 ">Height</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Height<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-9 col-sm-9 ">
                                     <input type="text" id="Height" class="form-control" placeholder="Height In Centimeters">
                                     <span id="HAlert" class="error" style="color: red;display:none">
@@ -201,7 +201,7 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="control-label col-md-3 col-sm-3 ">Weight</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Weight<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-9 col-sm-9 ">
                                     <input type="text" id="Weight" class="form-control" placeholder="Weight In Kilograms">
                                     <span id="WAlert" class="error" style="color: red;display:none">
@@ -238,7 +238,9 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="control-label col-md-3 col-sm-3 ">Province</label>
+                                <label class="control-label col-md-3 col-sm-3 ">
+                                    Province <span class="error" style="color: red;">*</span>
+                                </label>
                                 <div class="col-md-9 col-sm-9">
                                     <select class="form-control" id="Province"></select>
                                 </div>
@@ -272,7 +274,7 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="control-label col-md-3 col-sm-3 ">Payment</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Payment<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-3 col-sm-3">
                                     <input type="text" id="Payment" class="form-control" placeholder="Payment" disabled>
                                 </div>
