--- a/Jk_Fitness/Views/Employee/Index.cshtml
+++ b/Jk_Fitness/Views/Employee/Index.cshtml
@@ -115,13 +115,13 @@
                                         </div>
                                     </div>
                                     <div class="form-group row ">
-                                        <label class="control-label col-md-4 col-sm-4 ">First Name</label>
+                                        <label class="control-label col-md-4 col-sm-4 ">First Name<span class="error" style="color: red;">*</span></label>
                                         <div class="col-md-8 col-sm-8">
                                             <input type="text" required id="Fname" class="form-control">
                                         </div>
                                     </div>
                                     <div class="form-group row ">
-                                        <label class="control-label col-md-4 col-sm-4 ">Last Name</label>
+                                        <label class="control-label col-md-4 col-sm-4 ">Last Name<span class="error" style="color: red;">*</span></label>
                                         <div class="col-md-8 col-sm-8">
                                             <input type="text" required id="Lname" class="form-control">
                                         </div>
@@ -171,7 +171,7 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="control-label col-md-3 col-sm-3 ">Email</label>
+                                <label class="control-label col-md-3 col-sm-3 ">Email<span class="error" style="color: red;">*</span></label>
                                 <div class="col-md-9 col-sm-9 ">
                                     <input type="text" id="Email" class="form-control">
                                     <span id="EmailAlert" class="error" style="color: red;display:none">
@@ -205,7 +205,7 @@
                             </div>
                             <div class="bootstrap-timepicker">
                                 <div class="form-group row">
-                                    <label class="control-label col-md-3 col-sm-3">Morning Start Time</label>
+                                    <label class="control-label col-md-3 col-sm-3">Morning Start Time<span class="error" style="color: red;">*</span></label>
 
                                     <div class="input-group date col-md-3 col-sm-3" id="timepicker" data-target-input="nearest">
                                         <input type="text" id="MorningIn" class="form-control datetimepicker-input" data-target="#timepicker" data-toggle="datetimepicker" />
@@ -214,7 +214,7 @@
                                         </div>
                                     </div>
 
-                                    <label class="control-label col-md-3 col-sm-3">Morning End Time</label>
+                                    <label class="control-label col-md-3 col-sm-3">Morning End Time<span class="error" style="color: red;">*</span></label>
 
                                     <div class="input-group date col-md-3 col-sm-3" id="timepicker1" data-target-input="nearest">
                                         <input type="text" id="MorningOut" class="form-control datetimepicker-input" data-target="#timepicker1" data-toggle="datetimepicker" />
@@ -226,7 +226,7 @@
                             </div>
                             <div class="bootstrap-timepicker">
                                 <div class="form-group row">
-                                    <label class="control-label col-md-3 col-sm-3">Evening Start Time</label>
+                                    <label class="control-label col-md-3 col-sm-3">Evening Start Time<span class="error" style="color: red;">*</span></label>
 
                                     <div class="input-group date col-md-3 col-sm-3" id="timepicker2" data-target-input="nearest">
                                         <input type="text" id="EveningIn" class="form-control datetimepicker-input" data-target="#timepicker2" data-toggle="datetimepicker" />
@@ -235,7 +235,7 @@
                                         </div>
                                     </div>
 
-                                    <label class="control-label col-md-3 col-sm-3">Evening End Time</label>
+                                    <label class="control-label col-md-3 col-sm-3">Evening End Time<span class="error" style="color: red;">*</span></label>
 
                                     <div class="input-group date col-md-3 col-sm-3" id="timepicker3" data-target-input="nearest">
                                         <input type="text" id="EveningOut" class="form-control datetimepicker-input" data-target="#timepicker3" data-toggle="datetimepicker" />
